# mandarin-text-parser

./: AGENTS.md  README.md  pnpm-lock.yaml
.github/workflows/: trunk-pipeline.yaml
apps/backend/: .env.example  Cargo.toml
apps/backend/src/: main.rs
apps/frontend/: index.html  package.json  setupVitest.ts  tsconfig.json
apps/frontend/src/: App.test.tsx  App.tsx  index.css
apps/frontend/src/lib/: result-store.ts  types.ts
